# PS5-Game-Scraper

./: .gitignore  AUTOUPDATER.md  BUILD.md  README.md  SETUP_AUTOUPDATER.md
.github/workflows/: build.yml
assets/: icon1.icns
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: updater.toml
src-tauri/src/: main.rs
ui/: index.html
