[package]
name    = "ps5-game-browser"
version = "4.0.0"
edition = "2021"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2" }
tauri-plugin-http  = "2"
tauri-plugin-shell = "2"
# Second-launch prevention. When a second copy of the exe runs, it sends its
# args to the already-running instance (via Windows mutex / macOS NSDistributedNotification
# / Linux dbus), gets a callback in our main.rs that focuses the existing
# window, and then exits silently. User never sees two windows.
tauri-plugin-single-instance = "2"
# Used by the custom updater module: hits GitHub API + downloads the installer.
# rustls-tls avoids OpenSSL system deps across all platforms.
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Lean release build
[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
